...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/search_bar"
            app:layout_constraintTop_toTopOf="@+id/search_bar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_item"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
...
