<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.dashboard.DashboardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ln_appbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/worksans_semibold"
            android:includeFontPadding="false"
            android:text="@string/Add"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ln_appbar">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ln_appbar">

            <RelativeLayout
                android:id="@+id/rl_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/bg_dash_image"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_choose"
                    style="@style/Widget.Material3.CardView.Filled"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="#00F5F8FA"
                    app:cardCornerRadius="20dp">

                    <ImageView
                        android:id="@+id/iv_placeholder"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="center"
                        android:src="@drawable/ic_add_image" />
                </com.google.android.material.card.MaterialCardView>

            </RelativeLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_desc"
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="#00000000"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rl_image"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_desc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="desc"
                    android:background="#00000000"
                    android:fontFamily="@font/worksans_medium"
                    android:gravity="start"
                    android:hint="@string/write_description"
                    android:lineSpacingExtra="5dp"
                    android:inputType="text"
                    android:padding="16dp"
                    android:textColor="@color/black"
                    android:textColorHint="#80000000"
                    android:textSize="16sp" />
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:id="@+id/ln_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_ln_location"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/card_desc">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/worksans_semibold"
                    android:text="@string/tambahkan_lokasi_saat_ini"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/switch_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false" />
            </LinearLayout>

            <com.overdevx.mystoryapp.customview.MyButtonSubmit
                android:id="@+id/btn_upload"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:layout_marginTop="25dp"
                android:enabled="false"
                android:fontFamily="@font/worksans_semibold"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ln_location" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progressindicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:indeterminate="true"
                android:visibility="invisible"
                app:indicatorColor="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_upload" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>