<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_add"
        android:title="@string/Add" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_bookmarklist"
        android:title="@string/bookmark" />

</menu>